# hqrrp

./: .gitignore  CMakeLists.txt  License.txt  Makefile  NoFLA_HQRRP_WY_blk_var4.c  NoFLA_HQRRP_WY_blk_var4.h  NoFLA_HQRRP_WY_blk_var5.c  NoFLA_HQRRP_WY_blk_var5.h  README.md  README.txt
.github/workflows/: core-linux.yaml
CMake/: HQRRPConfig.cmake.in  blaspp.cmake  config.cmake  lapackpp.cmake
benchmark/: CMakeLists.txt
include/: hqrrp.h  util.h
lapack_compatible_sources/: CMakeLists.txt  Makefile  NoFLA_HQRRP_WY_blk_var4.c  NoFLA_HQRRP_WY_blk_var4.cpp  NoFLA_HQRRP_WY_blk_var4.h  simple_test.c  simple_test.cpp
libflame_sources/: FLA_HQRRP_UT_blk_var2.c  FLA_HQRRP_UT_blk_var2.h  Makefile  simple_test.c
src/: CMakeLists.txt  hqrrp.cpp  simple_test.cpp  util.cpp
test/: CMakeLists.txt  main.cpp  test_hqrrp.cpp
